5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1838_1280.log
== TEST (2019-06-26 02:58:59) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if y==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif x == 'D':
		if y==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if x==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if x==3:
			ytab=0
		else:
			ytab +=1 
	elif(x==3 and y==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:00:01) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if y==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif x == 'D':
		if y==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if x==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if x==3:
			ytab=0
		else:
			ytab +=1 
	elif(xtab==3 and ytab==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:01:31) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if ytab==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif x == 'D':
		if ytab==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if xtab==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if xtab==3:
			ytab=0
		else:
			ytab +=1 
	elif(xtab==3 and ytab==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 03:02:42) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if ytab==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif x == 'D':
		if ytab==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if xtab==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if xtab==3:
			ytab=0
		else:
			ytab +=1 
	elif(xtab==3 and ytab==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
1.07266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1280/main.py", line 49, in <module>
    if tabuleiro[ytab,xtab] == 11:
IndexError: index 13 is out of bounds for axis 1 with size 13

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:05:07) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if xtab==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif x == 'D':
		if xtab==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if ytab==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if ytab==3:
			ytab=0
		else:
			ytab +=1 
	elif(xtab==3 and ytab==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:05:57) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if xtab==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif x == 'D':
		if xtab==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if ytab==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if ytab==3:
			ytab=0
		else:
			ytab +=1 
	elif(xtab==3 and ytab==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[xtab,ytab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:07:38) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if ytab==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif xtab == 'D':
		if ytab==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if xtab==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if xtab==3:
			ytab=0
		else:
			ytab +=1 
	elif(xtab==3 and ytab==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:08:32) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if xtab==0 :
			xtab = 0
		else:
			xtab-=1
    # Move personagem para DIREITA
	elif xtab == 'D':
		if xtab==5:
			xtab = 0
		else:
			xtab+=1
    # Move personagem para CIMA
	elif x == 'W':
		if ytab==0 :
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if ytab==3:
			ytab=0
		else:
			ytab +=1 
	elif(xtab==3 and ytab==3):
		xtab=0
		ytab=0

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:13:38) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=0
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=5
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=3
		else:
			ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:14:28) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=0
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=4
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=0
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=2
		else:
			ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:18:04) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:19:11) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:25:43) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif tabuleiro[ytab,xtab]==33:
		ytab=ytab-1
		xtab=xtab-1
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:27:36) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif tabuleiro[ytab,xtab]==33:
		ytab=ytab+0
		xtab=xtab+0
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:28:29) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif tabuleiro[ytab,xtab]==33:
		ytab=ytab-1
		xtab=xtab-1
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:29:34) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif tabuleiro[ytab,xtab]==33:
		ytab=ytab-1
		xtab=xtab-1
# Imprime saidas
print("posicao x: ", xtab+1)
print("posicao y: ", ytab)
print("moedas: ", moeda+1)
print("life: ", life+10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 03:29:44) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif tabuleiro[ytab,xtab]==33:
		ytab=ytab-1
		xtab=xtab-1
# Imprime saidas
print("posicao x: ", xtab+1)
print("posicao y: ", ytab)
print("moedas: ", moeda+1)
print("life: ", life+10)
-- EXECUTION TIME:
1.1855
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  3
posicao y:  1
moedas:  7
life:  105
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  2
posicao y:  -6
moedas:  10
life:  45
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  1
posicao y:  -7
moedas:  14
life:  20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 03:33:19) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif tabuleiro[ytab,xtab]==33:
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.854473
-- ERROR:
  File "/home/codebench/codes/1838/1280/main.py", line 62
    print("posicao x: ", xtab)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:33:23) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5
	elif tabuleiro[ytab,xtab]==33:
		
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 62
    print("posicao x: ", xtab)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:37:32) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 
		

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

	
# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 03:38:47) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:05:50) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		if(xtab==0):
			xtab=xtab
		else:
			xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		if(xtab==5):
			xtab=xtab
		else:
			xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		if(ytab==0):
			ytab=ytab
		else:
			ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		if(ytab==3):
			ytab=ytab
		else:
			ytab +=1 

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:16:50) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	x1=xtab
	x2=ytab
	
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 
	
	if(xtab>=shape(tabuleiro)[1] or xtab<0 or ytab>=shape(tabuleiro)[0] or ytab<0 or tabuleiro[ytab,xtab]==33):
		xtab=x1
		ytab=x2
    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:19:54) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 110

# Analise da jogada
for x in mov:
	x1=xtab
	x2=ytab
	
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 
	
	if(xtab>=shape(tabuleiro)[1] or xtab<0 or ytab>=shape(tabuleiro)[0] or ytab<0 or tabuleiro[ytab,xtab]==33):
		xtab=x1
		ytab=x2
    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:20:16) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 110

# Analise da jogada
for x in mov:
	x1=xtab
	x2=ytab
	
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 
	
	if(xtab>=shape(tabuleiro)[1] or xtab<0 or ytab>=shape(tabuleiro)[0] or ytab<0 or tabuleiro[ytab,xtab]==33):
		xtab=x1
		ytab=x2
    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.940223
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  85
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  5
posicao y:  3
moedas:  20
life:  85
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  2
moedas:  13
life:  65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:22:02) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	x1=xtab
	x2=ytab
	
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab -=1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab +=1 
    # Move personagem para CIMA
	elif x == 'W':
		ytab -=1 
    # Move personagem para BAIXO
	elif x == 'S':
		ytab +=1 
	
	if(xtab>=shape(tabuleiro)[1] or xtab<0 or ytab>=shape(tabuleiro)[0] or ytab<0 or tabuleiro[ytab,xtab]==33):
		xtab=x1
		ytab=x2
    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda +=1 	
        # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life-5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.720639
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
